--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -51,8 +51,8 @@
                     <div class="borderClass">
                         <div class="titleCLass"><i class="fa fa-file-text"></i> Script Awards</div>
                         <div class="listClass">
-                            <li>Best Screenplay - Produced</li>
-                            <li>Best Screenplay - Unproduced</li>
+                            <li>Best Original Screenplay</li>
+                            <li>Best Adapted Screenplay</li>
                         </div>
                     </div>
                 </div>
