--- a/src/app/guild/guild.component.html
+++ b/src/app/guild/guild.component.html
@@ -47,11 +47,11 @@
                 <div class="col-sm-6">
                     <div class="borderClass">
                         <div class="titleCLass">Review Process</div>
-                        <p>Starting October 1st, you can visit <a
+                        <p>Visit <a
                                 href="https://filmfreeway.com/SnohomishFilmFestival">Film Freeway</a> to conduct
                             reviews.</p>
                         <hr>
-                        <p><b>Tier 1:</b> Guild Members can watch as many or as few of the films as
+                        <p><b>Tier 1:</b> All Guild Members can watch as many or as few of the films as
                             you
                             have time to watch and rate them in 5 categories, plus give feedback.
                         </p>
@@ -69,14 +69,18 @@
                                 <li>Stunts / Effects / Artistic Appeal, rate from 1-10</li>
                             </ol>
                             <ul>
-                                <li>Comments to other judges</li>
-                                <li>Comments to the film maker</li>
+                                <li>Comments to festival staff.</li>
+                                <li>Comments to the film maker.</li>
                             </ul>
                         </div>
 
 
                         <p>
-                            The scores from all the scorecards will be tabulated and the top 40 films move on to tier 2.
+                            The scores from all the scorecards will be tabulated and the top 30 films make it into the festival.
+                        </p>
+                        <p><b>Tier 2:</b> Starting July 1st: The 8 guild members who have watched the most number of films automatically become Tier 2 members. This group will pick the top 3 movies for each award.
+                        </p>
+                        <p><b>Tier 3:</b> Starting July 15th: Each award will be assigned to a group of 3 "experts" who will vote on a winner from the 3 selected films.
                         </p>
                         <!--<p>
                             <b>Tier 2:</b> The submission process closes June 30th. Starting July 1st the Tier 2
