--- a/src/app/guild/guild.component.html
+++ b/src/app/guild/guild.component.html
@@ -53,23 +53,27 @@
                         <hr>
                         <p><b>Tier 1:</b> All Guild Members can watch as many or as few of the films as
                             you
-                            have time to watch and rate them in 5 categories, plus give feedback.
+                            have time for.
                         </p>
-                        <p>The judging
-                            forms look like this:</p>
-
+                        <p>To conduct a review follow these steps:</p>
+                        <ol>
+                            <li>Log into Film Freeway.</li>
+                            <li>Click "Submissions" at the top.</li>
+                            <li>Click on a film. (<i class="fa fa-flag" style="color: blue;"></i> = Films, <i class="fa fa-flag" style="color: orange;"></i> = Scripts)</li>
+                            <li>Watch the film (password is directly beneath the film).</li>
+                            <li>Scroll down and click the blue "Rate Project" button.</li>
+                        </ol>
 
                         <div style="border: 1px solid black; padding: 10px; margin: 10px;">
                             <div><b><u>Judging Form</u></b></div>
                             <ol>
-                                <li>Acting, rate from 1-10</li>
-                                <li>Directing, rate from 1-10</li>
-                                <li>Writing/Story, rate from 1-10</li>
-                                <li>Sound / Music, rate from 1-10</li>
-                                <li>Stunts / Effects / Artistic Appeal, rate from 1-10</li>
+                                <li>Acting, (1-10)</li>
+                                <li>Directing, (1-10)</li>
+                                <li>Writing/Story, (1-10)</li>
+                                <li>Sound / Music, (1-10)</li>
+                                <li>Stunts / Effects / Artistic Appeal, (1-10)</li>
                             </ol>
                             <ul>
-                                <li>Comments to festival staff.</li>
                                 <li>Comments to the film maker.</li>
                             </ul>
                         </div>
@@ -78,7 +82,7 @@
                         <p>
                             The scores from all the scorecards will be tabulated and the top 30 films make it into the festival.
                         </p>
-                        <p><b>Tier 2:</b> Starting July 1st: The 8 guild members who have watched the most number of films automatically become Tier 2 members. This group will pick the top 3 movies for each award.
+                        <p><b>Tier 2:</b> Starting July 1st: The 8 guild members who have watched the most films automatically become Tier 2 members. This group will pick the top 3 movies for each award.
                         </p>
                         <p><b>Tier 3:</b> Starting July 15th: Each award will be assigned to a group of 3 "experts" who will vote on a winner from the 3 selected films.
                         </p>
