--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -16,8 +16,8 @@
                 <div class="col-sm-6">
 
                     <div class="borderClass">
-                        <div class="titleCLass">Submit Your Projects!</div>
-                        We are now accepting short films and scripts for next year's festival.
+                        <div class="titleCLass">Now Accepting All Projects!</div>
+                        Any short film or script can be submitted regardless of what year it was completed.
                         <div style="font-size: 32px; text-align: center;"></div>
                         <div style="text-align: center; padding: 10px;">
                             <app-button [routerLink]="['/submit']" [name]="'More Info'"></app-button>
