--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -26,7 +26,7 @@
                             <hr>
                             <li>Best Comedy</li>
                             <li>Best Documentary</li>
-                            <li>Best Drama</li>
+                            <li>Best Drama/Action</li>
                             <li>Best Horror</li>
                             <li>Best Music Video</li>
                             <li>Best Sci-Fi</li>
@@ -37,6 +37,7 @@
                     <div class="borderClass">
                         <div class="titleCLass"><i class="fa fa-list-alt"></i> Genres</div>
                         <div class="listClass">
+                            <li>Action</li>
                             <li>Comedy</li>
                             <li>Documentary</li>
                             <li>Drama</li>
