[sff] lots of changes and guild page

--- a/src/app/awards/awards.component.html
+++ b/src/app/awards/awards.component.html
@@ -10,17 +10,15 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="borderClass">
-                        <div class="titleCLass"><i class="fa fa-trophy"></i> Film Awards</div>
+                        <div class="titleCLass"><i class="fa fa-film"></i> Film Awards</div>
                         <div class="listClass">
                             <li>Best Picture</li>
                             <li>Best Director</li>
                             <li>Best Actor</li>
                             <li>Best Actress</li>
                             <hr>
-                            <li>Best Sound</li>
-                            <li>Best Music Score</li>
+                            <li>Best Sound / Music</li>
                             <li>Best Editing</li>
-                            <li>Best Cinematics (Stunts/Special Effects/Artistic Appeal)</li>
                             <li>Best Supporting Performance</li>
                             <li>Best Performance by a Child</li>
                             <hr>
