--- a/src/app/guild/guild.component.html
+++ b/src/app/guild/guild.component.html
@@ -19,6 +19,7 @@
                             promote and enrich the Washington State independent film industry. Your help is greatly
                             appreciated.
                         </p>
+                        <p>Note: Your name will show up on the Guild Member page once you have completed your first Film Review.</p>
                         <div style="text-align: center; font-size: 20px;">
                             <a [routerLink]="['/people']" [queryParams]="{buttonIdx: 5}">
                                 Guild Members
