--- a/src/app/join/join.component.html
+++ b/src/app/join/join.component.html
@@ -19,13 +19,13 @@
                             Interested in adding your film to our database, writing film reviews or helping out with the festival? Sign up below!
                         </p>
                     </div>
-                    <app-button *ngIf="!user.id" (click)="loginModal.show()" [name]="'Log In'" [class]="'large'"></app-button>
+                    <app-button *ngIf="!user.id" (click)="loginModal.show()" [name]="'Sign up!'" [class]="'large'"></app-button>
                 </div>
                 <div class="col-sm-6">
                     <div class="borderClass">
                         <div class="titleCLass">Member Benefits</div>
                         <div><i class="fa fa-check"></i> It's Free!</div>
-                        <div><i class="fa fa-user"></i> Add your personal profile to the database.</div>
+                        <div><i class="fa fa-user"></i> Add a profile to the database.</div>
                         <div><i class="fa fa-comments"></i> Comment on other's films.</div>
                         <div><i class="fa fa-film"></i> Submit your films, current and old.</div>
                         <div><i class="fa fa-thumbs-up"></i> Become an official online film critic.</div>
