--- a/src/app/page-shell/page-shell.component.html
+++ b/src/app/page-shell/page-shell.component.html
@@ -3,7 +3,7 @@
         <div class="navigation-bar" [ngStyle]="ngStyleButton(3)">
             <i *ngIf="!lButton" class="fa fa-arrow-left icon-left" [ngStyle]="ngStyleIcon(1)"
                 (click)="backButtonClicked()"></i>
-            <i *ngIf="lButton=='info'" (click)="leftButtonPressed()" class="fa fa-info-circle icon-left"
+            <i *ngIf="lButton=='info2'" (click)="leftButtonPressed()" class="fa fa-info-circle icon-left"
                 [ngStyle]="ngStyleIcon(1)"></i>
             <span class="navTitleBar">
                 <div class="mainTitle"><i class="fa fa-diamond" style="color: #00ff00;"></i> Snohomish Film Festival</div>
