--- a/src/app/submit-film/submit-film.component.html
+++ b/src/app/submit-film/submit-film.component.html
@@ -5,10 +5,7 @@
 
     <div class="blackBox">
 
-        <div class="borderClass" style="background-color: #ffffc0;">Note: Due to Covid, plus the fact that this is our first year, we are accepting all short films/scripts regarless of what year it was completed.
-            Feel free to submit your older films for a chance to win one of our awards.
-        </div>
-    
+  
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6">
@@ -22,7 +19,7 @@
                             <li>Anyone is eligible to submit.</li>
                             <li>Any type of film can be submitted.</li>
                             <li>Guaranteed feedback from multiple industry insiders.</li>
-                            <li>Festival lineup announced July 15, 2021.</li>
+                            <li>Festival lineup announced July 15.</li>
                         </div>
                     </div>
 
@@ -37,17 +34,17 @@
                         </tr>
                         <tr>
                             <td>Early Bird</td>
-                            <td>Jan 31, 2021</td>
+                            <td>Jan 31, 2022</td>
                             <td>$15</td>
                         </tr>
                         <tr>
                             <td>Regular</td>
-                            <td>May 31, 2021</td>
+                            <td>June 1, 2022</td>
                             <td>$30</td>
                         </tr>
                         <tr>
                             <td>Late</td>
-                            <td>June 30, 2021</td>
+                            <td>June 30, 2022</td>
                             <td>$45</td>
                         </tr>
                     </table>
