--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -17,11 +17,11 @@
                     <div class="borderClass">
                         <div class="titleCLass">Location Details</div>
                         <div class="listClass">
-                             <li>Saturday September 18, 2021</li>
-                            <li>Everett Performaing Arts Center</li>
-                            <li>Time: 3pm - 8pm</li>
-                            <li>Cost: $20</li>
-                            <li># Films: 30</li>
+                             <li> Saturday September 18, 2021</li>
+                            <li> Everett Performing Arts Center</li>
+                            <li> Time: 3pm - 8pm</li>
+                            <li> Cost: $20</li>
+                            <li> # Films: 30</li>
                         </div>
                     </div>
                     <app-button [name]="'Buy Tickets'" [icon]="'ticket'"></app-button>
