--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,7 +13,7 @@
                 their work and receive regognition for their achievements. Snohomish Film Festival aims to build and
                 foster community connections and help build a stronger film community in Washington State.
             </p>
-            <p> This will be an in-person film festival Saturday September 18, 2021 at Everett Performaing Arts Center 
+            <p> Due to Covid, this will be an online festival Saturday September 18, 2021 
                 from 3pm - 8pm. We hope to see all of you there.
             </p>
             <p>
@@ -21,7 +21,7 @@
                 give the film makers written feedback from a number of local film insiders.
             </p>
             <p>
-                This festival will feature 30 films, a script reading room, film maker Q&A sessions plus a live awards show handing out 18 awards!
+                This festival will feature 30 films, a script reading room, film maker Q&A sessions plus an awards show handing out 18 awards!
                 Get your film or script submitted to be part of the fun.
             </p>
             <div style="text-align: center;">
