--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -25,7 +25,7 @@
                 </button>
             </div>
         </div>
-        <div *ngIf="selectedYear>0">The following films have been submitted to Snohomish Film Festival {{selectedYear}}. Winning entries will be announced July 1st!</div>
+        <div *ngIf="selectedYear>0">The following films have been submitted to Snohomish Film Festival {{selectedYear}}. Winning entries will be announced July 15th!</div>
         <div *ngIf="selectedYear==0">The following films are currently available to watch. Feel free to rate and leave a review!</div>
 
 
