--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -76,10 +76,11 @@
                 <app-film-snapshot *ngFor="let film of displayUser.films" [film]="film"></app-film-snapshot>
 
                 <div *ngIf="userId==1">
-                    <app-button *ngIf="userId==1 && !displayUser.adminFlg" [name]="'Upgrade to Admin'" [icon]="'lock'" (click)="upgradeToAdmin('upgradeToAdmin')"></app-button>
                     <app-button *ngIf="userId==1 && !displayUser.guildMemberFlg" [name]="'Upgrade to Guild'" [icon]="'shield'" (click)="upgradeToAdmin('upgradeToGuild')"></app-button>
-                    <app-button *ngIf="userId==1 && !displayUser.staffFlg" [name]="'Upgrade to Staff'" [icon]="'suitcase'" (click)="upgradeToAdmin('upgradeToStaff')"></app-button>    
-                    <app-button *ngIf="userId==1 && !displayUser.boardFlg" [name]="'Confirm Guild'" [icon]="'shield'" (click)="upgradeToAdmin('confirmGuild')"></app-button>    
+                    <app-button *ngIf="userId==1 && displayUser.guildMemberFlg && !displayUser.adminFlg" [name]="'Upgrade to Admin'" [icon]="'lock'" (click)="upgradeToAdmin('upgradeToAdmin')"></app-button>
+                    <app-button *ngIf="userId==1 && displayUser.guildMemberFlg && !displayUser.staffFlg" [name]="'Upgrade to Staff'" [icon]="'suitcase'" (click)="upgradeToAdmin('upgradeToStaff')"></app-button>    
+                    <app-button *ngIf="userId==1 && displayUser.guildMemberFlg && !displayUser.officialGuildFlg" [name]="'Confirm Guild'" [icon]="'shield'" (click)="upgradeToAdmin('confirmGuild')"></app-button>    
+                    <app-button *ngIf="userId==1 && displayUser.guildMemberFlg" [name]="'Demote User'" [icon]="'arrow-down'" (click)="upgradeToAdmin('downgradeUser')"></app-button>    
                 </div>
 
                 <table class="drTable" *ngIf="userRoles && userId==1">
